--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=hvx, initial-scale=1.0">
     <title>Home</title>
+    <link rel="icon" href="imagenes/favicon.png" type="image/png" sizes="16x16">
+    <link rel="stylesheet" href="css/miestilos.css">
 </head>
 <body>
+    <div>
+        <header>
+            Este es el titulo
+        </header>
+    </div>
+
+    <main>
+
+        <div>
+            <nav>
+                principal| fotos | videos | contacto    
+            </nav>
+        </div>
+
+        <div id="noticias">
+            articulos
+        </div>
+        <div class="noticiaslocales">
+            Cita del articulo uno
+            Cita del articulo dos
+        </div>
+        <div class="noticiaslocales">
+            Cita del articulo tres
+            Cita del articulo cuatro
+        </div>
+        
+    </main>
     
 </body>
 </html>
