--- a/index.html
+++ b/index.html
@@ -1,40 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=hvx, initial-scale=1.0">
-    <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>home</title>
     <link rel="icon" href="imagenes/favicon.png" type="image/png" sizes="16x16">
+    <!--se usa para poner el logo en la pagina-->
     <link rel="stylesheet" href="css/miestilos.css">
 </head>
+
 <body>
-    <div>
+
+    <div class="titulo">
         <header>
             Este es el titulo
         </header>
     </div>
-
-    <main>
-
-        <div>
+    <div id="navegacion">
+        <main>
             <nav>
-                principal| fotos | videos | contacto    
+                <a href="index.html"> Inicio </a> | 
+                <a href="fotos.html"> Fotos </a> | 
+                <a href="videos.html"> Videos </a> | 
+                <a href="contacto.html"> Contacto </a>
             </nav>
-        </div>
-
-        <div id="noticias">
-            articulos
-        </div>
-        <div class="noticiaslocales">
+    </div>
+    <div id="noticias"><!--el id es para identificar la etiqueta -->
+        <span>
+        Articulos
+        </span>
+    </div><!--el id es un identificador unico por eso mism no se puede poner en otras etiquetas-->
+    <div class="noticiaslocales"> <!-- se tiene siempre que escribir todo pegado-->
+        <p>
             Cita del articulo uno
+        </p>
+        <p>
             Cita del articulo dos
-        </div>
-        <div class="noticiaslocales">
+        </p>
+    </div> <!--en cambio el class es uno grupal lo cual significa que el mismo se puede poner en varios lugares-->
+    <div class="noticiaslocales">
+        <p>
             Cita del articulo tres
+        </p>
+        <p>
             Cita del articulo cuatro
-        </div>
-        
+        </p>
+    </div>
+    <div>
+        <h1>
+            Libros
+        </h1>
+        <div id="libro">
+        <div class = "libros">Libro: It, Stephen King</div>
+        <div class = "libros">Libro: Carrie, Stephen King</div>
+        <div class = "libros">Libro: El resplandor, Stephen King</div>
+        <div class = "libros">Libro: Misery, Stephen King</div>
+    </div>
+    </div>
+
+    <div>
+        <h2>Etiqueta parrafo</h2>
+        <p>
+            La muerte es una quimera: porque mientras yo existo, no existe la muerte;
+            y cuando existe la muerte, ya no existo yo.
+            Epicuro de samos
+        </p>
+        <h2> Etiqueta pre</h2>
+        <pre>
+            La muerte es una quimera: porque mientras yo existo, no existe la muerte;
+            y cuando existe la muerte, ya no existo yo.
+            Epicuro de samos  
+        </pre>
+    </div>
+
     </main>
-    
 </body>
 </html>
