--- a/fotos.html
+++ b/fotos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,23 +11,57 @@
     <link rel="stylesheet" href="css/miestilos.css">
 
 </head>
+
 <body>
     <div class="titulo">
         <header>
             Fotos
         </header>
     </div>
-    
-<main>
-    <div id="navegacion">
+
+    <main>
+        <div id="navegacion">
             <nav>
-                <a href="index.html"> Inicio </a> | 
-                <a href="fotos.html"> Fotos </a> | 
-                <a href="videos.html"> Videos </a> | 
+                <a href="index.html"> Inicio </a> |
+                <a href="fotos.html"> Fotos </a> |
+                <a href="videos.html"> Videos </a> |
                 <a href="contacto.html"> Contacto </a>
             </nav>
-    </div>
-</main>
+        </div>
+
+        <div>
+            <h3>Messi</h3>
+            <img src="imagenes/favicon.png">
+        </div>
+
+        <div>
+            <p>
+                <br/>
+                width-Este atributo declara el ancho de la imagen.
+                <br/>
+                height-Este atributo declara la alturade la imagen.
+                <br/>
+                alt-Este atributo especifica el texto que se muestra cuando la imagen no se puede cargar.
+            </p>
+
+        </div>
+        <div>
+            <h3 id="imagen-original">Imagen modificada</h3>
+            <figure>
+                <img src="imagenes/favicon.png" width="150">
+                <figcaption>De esta forma llamamos a Messi</figcaption>
+            </figure>
+
+        </div>
     
+
+
+    </main>
+    <footer>
+        <address>Alajuela, Costa Rica</address>
+        <small>&copy; Derechos Reservados 2024</small>
+    </footer>
+
 </body>
+
 </html>
