--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <div id="navegacion">
         <main>
             <nav>
-                <a href="index.html"> Inicio </a> | 
-                <a href="fotos.html"> Fotos </a> | 
-                <a href="videos.html"> Videos </a> | 
+                <a href="index.html"> Inicio </a> |
+                <a href="fotos.html"> Fotos </a> |
+                <a href="videos.html"> Videos </a> |
                 <a href="contacto.html"> Contacto </a>
             </nav>
     </div>
     <div id="noticias"><!--el id es para identificar la etiqueta -->
         <span>
-        Articulos
+            Articulos
         </span>
     </div><!--el id es un identificador unico por eso mism no se puede poner en otras etiquetas-->
     <div class="noticiaslocales"> <!-- se tiene siempre que escribir todo pegado-->
@@ -52,11 +52,11 @@
             Libros
         </h1>
         <div id="libro">
-        <div class = "libros">Libro: It, Stephen King</div>
-        <div class = "libros">Libro: Carrie, Stephen King</div>
-        <div class = "libros">Libro: El resplandor, Stephen King</div>
-        <div class = "libros">Libro: Misery, Stephen King</div>
-    </div>
+            <div class="libros">Libro: It, Stephen King</div>
+            <div class="libros">Libro: Carrie, Stephen King</div>
+            <div class="libros">Libro: El resplandor, Stephen King</div>
+            <div class="libros">Libro: Misery, Stephen King</div>
+        </div>
     </div>
 
     <div>
@@ -73,7 +73,23 @@
             Epicuro de samos  
         </pre>
     </div>
+    <div>
+        <p>
+            <!--br sirve para hacer saltos de linea-->
+            <strong>muerte es una <em>quimera</em></strong> porque mientras yo existo, no existe la muerte;<br /><br />
+            y cuando existe la muerte,<br /><br /> ya no existo yo.
+            Epicuro de samos
+
+        </p>
+
+    </div>
 
     </main>
+    <footer>
+        <address>Alajuela, Costa Rica</address>
+        <small>&copy; Derechos Reservados 2024</small>
+    </footer>
+
 </body>
+
 </html>
